# gigahorse

./: .bazelignore  .bazelrc  .gitignore  .scalafix.conf  .travis.yml  CONTRIBUTING.md  MODULE.bazel  README.markdown  WORKSPACE  bazelenv  build.sbt
.github/workflows/: ci.yml
akka-http/src/main/scala/gigahorse/support/akkahttp/: AkkaHttpClient.scala  AkkaHttpCompletionHandler.scala  AkkaHttpDownloadHandler.scala  AkkaHttpFullResponse.scala  AkkaHttpResponse.scala  AkkaHttpStream.scala  AkkaHttpStreamHandler.scala  AkkaHttpStreamResponse.scala  FunctionHandler.scala  Gigahorse.scala  MessageForwarder.scala  OkHandler.scala  WebSocketListener.scala
akka-http/src/test/scala/gigahorsetest/: AkkaHttpClientSpec.scala
apache-http/src/main/scala/gigahorse/support/apachehttp/: ApacheByteStreamHandler.scala  ApacheCompletionHandler.scala  ApacheFullResponse.scala  ApacheHandler.scala  ApacheHttpClient.scala  ApacheZeroCopyHandler.scala  FunctionHandler.scala  Gigahorse.scala  OkHandler.scala
apache-http/src/main/scala/gigahorse/support/apachehttpasyncclient/: ApacheByteStreamHandler.scala  ApacheCompletionHandler.scala  ApacheFullResponse.scala  ApacheHandler.scala  ApacheHttpClient.scala  ApacheZeroCopyHandler.scala  FunctionHandler.scala  Gigahorse.scala  OkHandler.scala
apache-http/src/test/scala/gigahorsetest/: ApacheHttpClientSpec.scala
asynchttpclient/src/main/scala/gigahorse/support/asynchttpclient/: AhcCompletionHandler.scala  AhcConfig.scala  AhcFullResponse.scala  AhcHander.scala  AhcHttpClient.scala  AhcStream.scala  AhcStreamHandler.scala  AhcStreamResponse.scala  FunctionHandler.scala  Gigahorse.scala  OkHandler.scala  WebSocketListener.scala  package.scala
asynchttpclient/src/test/resources/: application.conf
asynchttpclient/src/test/scala/gigahorsetest/: AhcHttpClientSpec.scala
common-test/: BUILD.bazel
common-test/src/main/scala/gigahorsetest/: BUILD  BUILD.bazel  BaseHttpClientSpec.scala  TestPlan.scala  WsTestPlan.scala
core/src/main/: BUILD  BUILD.bazel
core/src/main/contraband/: gigahorse.contra  gigahorse.json
core/src/main/contraband-scala/gigahorse/: AuthScheme.scala  Body.scala  Config.scala  ConfigMemorySize.scala  DefaultProxyServer.scala  EmptyBody.scala  EncodedString.scala  FileBody.scala  InMemoryBody.scala  ProxyServer.scala  Realm.scala  Request.scala  State.scala
core/src/main/datatype/: gigahorse.json
core/src/main/scala/gigahorse/: AhcConfig.scala  AhcHttpClient.scala  AhcRequest.scala  AhcResponse.scala  AuthScheme.scala  BUILD  Body.scala  BodyPart.scala  CompletionHandler.scala  Config.scala  ConfigExtra.scala  ConfigMemorySize.scala  DefaultProxyServer.scala  DownloadHandler.scala  EmptyBody.scala  EncodedString.scala  FileBody.scala  FullResponse.scala  FunctionHandler.scala  FutureLifter.scala  Gigahorse.scala  GigahorseSupport.scala  HttpClient.scala  HttpRead.scala  HttpWrite.scala  InMemoryBody.scala  OkHandler.scala  ProxyServer.scala  ReactiveHttpClient.scala  Realm.scala  Request.scala  Response.scala  RichRequest.scala  SSL.scala  SignatureCalculator.scala  StandardValues.scala  State.scala  StatusError.scala  Stream.scala  StreamResponse.scala  (+4 more)
core/src/test/scala/gigahorse/: HttpClientSpec.scala
core/src/test/scala/gigahorsetest/: HttpClientSpec.scala
docs/: 00.md  01-concepts.md  01.md  02-request.md  02.md  03-processing.md  03.md  04-stream.md  04.md  05-configuration.md  05.md  06-plugin.md  custom.css  template.properties
docs/ja/: 00.md  01-concepts.md  01.md  02-request.md  02.md  03-processing.md  03.md  04-stream.md  05-configuration.md  05.md  06-plugin.md
notes/: 0.1.0.markdown  0.1.1.markdown  0.2.0.markdown  0.3.0.markdown  0.3.1.markdown  about.markdown
okhttp/: BUILD
okhttp/src/main/scala/gigahorse/support/okhttp/: BUILD  BUILD.bazel  FunctionHandler.scala  Gigahorse.scala  OkHandler.scala  OkhClient.scala  OkhCompletionHandler.scala  OkhFullResponse.scala  OkhHandler.scala  OkhStreamHandler.scala  OkhWebSocketListener.scala
okhttp/src/test/: BUILD.bazel
okhttp/src/test/scala/gigahorsetest/: OkHttpClientSpec.scala
project/: Dependencies.scala  Shade.scala  plugin.sbt
toolchains/: BUILD.bazel
tools/local_modules/default/: MODULE.bazel  extensions.bzl
tools/local_modules/scala_2.13/: MODULE.bazel  extensions.bzl
tools/local_repos/default/: cross_scala_config.bzl  cross_scala_repositories.bzl
tools/local_repos/scala_2.13/: WORKSPACE  cross_scala_config.bzl
tools/rules/scala/: scala.bzl
tools/rules/scalafix/: scalafix.bzl
tools/scalafix_app/: BUILD.bazel  Main.scala
