load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_test")
load("@twitter_rules_jvm_export//jvm_export:jvm_export.bzl", "jvm_export")
load("@scala_multiverse//:cross_scala_config.bzl", "maven_dep")
load("//tools/rules/scala:scala.bzl", "scala_library")

scala_library(
    name = "okhttp",
    srcs = glob(["*.scala"]),
    deps = [
      "//core/src/main",
      maven_dep("com.squareup.okhttp3:okhttp"),
      maven_dep("com.squareup.okio:okio"),
    ],
    exports = [
      "//core/src/main",
      maven_dep("com.squareup.okhttp3:okhttp"),
      maven_dep("com.squareup.okio:okio"),
    ],
    tags = ["maven_coordinates=com.eed3si9n:okhttp_2.12:{pom_version}"],
    visibility = ["//visibility:public"],
)

jvm_export(
    name = "okhttp.publish",
    artifacts = [":okhttp"],
    project_name = "core",
    project_description = "An HTTP client for Scala",
    project_url = "https://eed3si9n.com/gigahorse/",
    scm_url = "https://github.com/eed3si9n/gigahorse",
    license = "Apache-2.0",
    snapshot_repo = "central",
    release_repo = "central",
    # python_path = "/usr/local/bin/python3",
    tags = ["manual"],
)
